examples/datalog/10_edge_cases/59_duplicate_insert.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_dup_ins
Knowledge graph 'test_dup_ins' created.
Switched to knowledge graph: test_dup_ins
> .kg use test_dup_ins
Switched to knowledge graph: test_dup_ins
> +data[(1, "a")].
Inserted 1 fact(s) into 'data'.
> +data[(1, "a")].
No facts inserted (1 duplicate skipped).
> +data[(1, "a")].
No facts inserted (1 duplicate skipped).
> ?- data(Id, Val).
1 rows:
  (1, "a")
> +count_data(<COUNT:Id>) :- data(Id, _).
Script error: Parse error: Invalid term: '<COUNT:Id>'
